# cv-suta

./: .gitignore  README.md  app.py  environment.yaml  pyproject.toml
config/: datasets.yaml  train.yaml
notebooks/: error_analysis.ipynb  explore.ipynb  results_analysis.ipynb
src/: train.py
src/models/: classifier.py
