[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban_issues"
version = "0.0.1"
description = "Classifying urban issue images"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Gabriele S. Vilas Boas" }]
requires-python = ">=3.11"

dependencies = [
  "hydra-core==1.3.2",
  "pyprojroot==0.3.0",
  "pandas",
  "kagglehub"
]

